[gd_scene load_steps=8 format=3 uid="uid://tg6srjh3f5kn"]

[ext_resource type="FontFile" uid="uid://bkcr7kulhnqyb" path="res://Super Boys.ttf" id="1_nqkro"]
[ext_resource type="Script" path="res://Scene/GameOverScene.gd" id="1_vy8rf"]

[sub_resource type="LabelSettings" id="LabelSettings_21ly1"]
font = ExtResource("1_nqkro")
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_x0ekw"]
font = ExtResource("1_nqkro")
font_size = 25

[sub_resource type="Animation" id="Animation_o58fm"]
resource_name = "shown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.321569)]
}

[sub_resource type="Animation" id="Animation_uplf7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.454902)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4u6ej"]
_data = {
"RESET": SubResource("Animation_uplf7"),
"shown": SubResource("Animation_o58fm")
}

[node name="Game Over scene" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vy8rf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.454902)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -76.0
offset_right = 100.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_21ly1")

[node name="score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -27.0
offset_right = 93.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_x0ekw")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 35.0
offset_right = 92.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4u6ej")
}

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[connection signal="button_down" from="VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="button_down" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_mouse_entered"]
